--- a/FindTheClueAPI/Web.config
+++ b/FindTheClueAPI/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FindTheClueAPI-20170602031702.mdf;Initial Catalog=aspnet-FindTheClueAPI-20170602031702;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Database=findthecluedb;Data Source=eu-cdbr-azure-west-b.cloudapp.net;User Id=ba2153642e0602;Password=f100c9ef" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FindTheClueAPI-20170602031702.mdf;Initial Catalog=aspnet-FindTheClueAPI-20170602031702;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="findthecluedbEntities" connectionString="metadata=res://*/FindTheClueDataModel.csdl|res://*/FindTheClueDataModel.ssdl|res://*/FindTheClueDataModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;database=findthecluedb;server=eu-cdbr-azure-west-b.cloudapp.net;user id=ba2153642e0602;password=f100c9ef&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
@@ -81,6 +81,25 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
+    <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
+  </entityFramework>
+  <system.data>
+    <!--<DbProviderFactories>
+        <remove invariant="MySql.Data.MySqlClient" name="MySQL Data Provider" />
+        <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+     </DbProviderFactories>-->
+    <!--<DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL"
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>-->
+  <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories></system.data>
+  <!--<entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
@@ -88,8 +107,8 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=7.0.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
+  </entityFramework>-->
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
